Versió Base Dev Marc

--- a/Footer.html
+++ b/Footer.html
@@ -7,7 +7,7 @@
 				href="#" class="fa fa-linkedin"></a> <a href="#"
 				class="fa fa-instagram"></a> <a href="#" class="fa fa-pinterest"></a>
 		</div>
-		<div class="col-12 col-md-3 bg-custom pb-3 mb-3">
+		<div class="col-12 col-md-3 bg-custom pb-3 mb-3 d-none d-md-block">
 			<div class="list-group list-group-flush">
 				<a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
