--- a/Nav.html
+++ b/Nav.html
@@ -1,9 +1,10 @@
 <!--Insert here your MPA block code for the Navigation Bar -->
 
-<nav
-		class="row navbar navbar-expand-lg navbar-dark bg-custom py-0 pr-3 pl-0 position-sticky fixed-top">
-		<a class="navbar-brand p-0" href="#"><img src="img/soc.jpg"
-			width="130px" class="d-inline-block align-top" alt=""></a>
+<nav class="row navbar navbar-expand-lg navbar-dark bg-custom py-0 pr-3 pl-0 position-sticky fixed-top">
+		<a class="navbar-brand p-0" style="max-width:70%;" href="#"><img src="img/soc.jpg"
+			width="130px" height="60px" class="d-inline-block align-top" alt="">
+			<span class="d-none d-xl-inline-block">Servei d'Ocupació <br> de Catalunya</span>
+			</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarNav" aria-controls="navbarNav"
 			aria-expanded="false" aria-label="Toggle navigation">
