--- a/Contacto.html
+++ b/Contacto.html
@@ -19,6 +19,8 @@
 <!-- Map Leaflet CSS -->
 <link rel="stylesheet"
 	href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
+<link rel="stylesheet"
+	href="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.css" />
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
@@ -31,14 +33,18 @@
 	<div data-include="Header.html"></div>
 
 	<section class="row">
-		<div class="col-12 col-lg-6 p-4">
+		<div class="col-12 col-lg-6 p-4" id="contacto">
 			<h1 class="pb-3">Contacto</h1>
 			<form name="contactForm1" action="contactform.js" method="post"
 				novalidate>
+				<div style="top: 20px; right: 10px;"
+					class="text-danger small position-absolute">* Campo
+					obligatorio</div>
 				<div class="form-group">
-					<label for="InputName1">Nombre Completo</label> <input type="text"
-						name="nombre" class="form-control" id="InputName1"
-						aria-describedby="nameHelp" placeholder="Nombre" required>
+					<label for="InputName1">Nombre Completo<span
+						class="text-danger">*</span></label> <input type="text" name="nombre"
+						class="form-control" id="InputName1" aria-describedby="nameHelp"
+						placeholder="Nombre" required>
 					<div class="invalid-feedback">Introduzca nombre por favor</div>
 				</div>
 
@@ -51,15 +57,17 @@
 				</div>
 
 				<div class="form-group">
-					<label for="InputEmail1">Dirección de Correo</label> <input
-						type="email" name="email" class="form-control" id="InputEmail1"
-						aria-describedby="emailHelp" placeholder="Email">
+					<label for="InputEmail1">Dirección de Correo<span
+						class="text-danger">*</span></label> <input type="email" name="email"
+						class="form-control" id="InputEmail1" aria-describedby="emailHelp"
+						placeholder="Email">
 					<div class="invalid-feedback">Correo Incorrecto</div>
 				</div>
 
 				<div class="form-group">
-					<label for="InputMessage1">Mensaje</label>
-					<textarea class="form-control" id="InputMessage1" name="comments" rows="3"></textarea>
+					<label for="InputMessage1">Mensaje<span class="text-danger">*</span></label>
+					<textarea class="form-control" id="InputMessage1" name="comments"
+						rows="3"></textarea>
 					<div class="invalid-feedback">Introduzca su mensaje por favor</div>
 				</div>
 
@@ -74,11 +82,23 @@
 					<label class="form-check-label" for="exampleCheck1">Check
 						me out</label>
 				</div> -->
+				<input type="hidden" name="grecaptcha">
 				<button type="submit" class="btn btn-primary bg-custom">Enviar</button>
 			</form>
 		</div>
-		<div class="col-12 col-lg-6 p-4">
-			<div id="cifoMap" style="width: 100%; height: 300px"></div>
+		<div class="col-12 col-lg-6 p-4" id="zonaMapa">
+			<div id="outerMap"></div>
+			
+			<button id="llegarBtn" class="btn btn-primary my-3" type="button"
+				data-toggle="collapse" data-target="#collapseSelect1"
+				aria-expanded="false" aria-controls="collapseExample">Cómo
+				Llegar</button>
+			<div class="collapse" id="collapseSelect1">
+				<select class="custom-select my-3" id="centro">
+					<option selected value=''>Selecciona Centro</option>
+				</select>
+			</div>
+
 		</div>
 
 	</section>
@@ -88,7 +108,7 @@
 	<div data-include="Footer.html"></div>
 
 	<!-- Optional JavaScript -->
-	
+
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		type="text/javascript"></script>
@@ -99,11 +119,44 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
 
+	<!-- Google Recaptcha v3 -->
+	<script src="https://www.google.com/recaptcha/api.js?render=6LfoRcAUAAAAAJGq54PPTbU4p_KKJXpxqK-j30eR"></script>
+
+
 	<!-- Map Leaflet JS -->
 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
-	
+	<script
+		src="https://unpkg.com/leaflet-routing-machine@latest/dist/leaflet-routing-machine.js"></script>
+
+	<!-- Form Check General Functions JS -->
+	<script src="js/formCheckFunctions.js"></script>
+
 	<!-- Own JavaScript -->
 	<script src="js/multipage.js" type="text/javascript"></script>
+	<script>
+		
+	
+	/* Fem la crida al llistat de centres  i omplim el selector per seleccionar el destí de la ruta*/	  
+		var xhr2= new XMLHttpRequest();
+		
+		xhr2.addEventListener('load',()=>{
+			
+			var objCentros = JSON.parse(xhr2.responseText);
+
+			for (var i=0;i<objCentros.length;i++){
+
+				document.getElementById('centro').innerHTML += `<option value='${objCentros[i].id}'>${objCentros[i].nombre}</option>`
+			}
+			
+			
+		})	
+		
+		xhr2.open("GET", "cifoCentros.js", true);
+		xhr2.send();
+	
+		
+	
+	</script>
 
 </body>
 </html>
