--- a/Header.html
+++ b/Header.html
@@ -1,40 +1,51 @@
 <!--Insert here your MPA block code for your Header -->
 
 <header class="row">
-		<div id="carouselExampleControls" class="col-12 p-0 carousel slide"
-			data-ride="carousel">
-			<div class="carousel-inner">
-				<div class="carousel-item active">
-					<img src="img/slide4.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide1.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide2.jpg" class="d-block w-100" alt="...">
-				</div>
-				<div class="carousel-item">
-					<img src="img/slide3.jpg" class="d-block w-100" alt="...">
+	<div id="carouselExampleControls" class="col-12 p-0 carousel slide"
+		data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="img/slide4.jpg" class="d-block w-100" alt="">
+			</div>
+			<div class="carousel-item">
+				<img src="img/slide1.jpg" class="d-block w-100" alt="">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>Innovación</h3>
+					<p>Ocho centros especializados en la divulgación de las últimas tecnologías.</p>
 				</div>
 			</div>
-			<a class="carousel-control-prev" href="#carouselExampleControls"
-				role="button" data-slide="prev"> <span
-				class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-				class="sr-only">Previous</span>
-			</a> <a class="carousel-control-next" href="#carouselExampleControls"
-				role="button" data-slide="next"> <span
-				class="carousel-control-next-icon" aria-hidden="true"></span> <span
-				class="sr-only">Next</span>
-			</a>
+			<div class="carousel-item">
+				<img src="img/slide2.jpg" class="d-block w-100" alt="">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>Ocupacional</h3>
+					<p>Orientado a personas en búsqueda de empleo.</p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img src="img/slide3.jpg" class="d-block w-100" alt="">
+				<div class="carousel-caption d-none d-md-block">
+					<h3>Interconectado</h3>
+					<p>En constante relación con la empresa para proporcionar los conocimientos adecuados.</p>
+				</div>
+			</div>
 		</div>
-		<nav class="col-12 col-md-6 p-0" aria-label="breadcrumb">
-			
-		</nav>
-		<div
-			class="col-12 col-md-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
-			<a href="#" class="fa fa-facebook"></a> <a href="#"
-				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
-				href="#" class="fa fa-linkedin"></a> <a href="#"
-				class="fa fa-instagram"></a> <a href="#" class="fa fa-pinterest"></a>
-		</div>
-	</header>
+		<a class="carousel-control-prev" href="#carouselExampleControls"
+			role="button" data-slide="prev" style="background: burlywood"><span
+			class="fa fa-chevron-left"
+			style="width: auto; font-size: 3rem; color: #00A4D5"></span> <span
+			class="sr-only">Previous</span> </a> <a class="carousel-control-next"
+			href="#carouselExampleControls" role="button" data-slide="next"
+			style="background: burlywood"> <span class="fa fa-chevron-right"
+			style="width: auto; font-size: 3rem; color: #00A4D5"></span> <span
+			class="sr-only">Next</span>
+		</a>
+	</div>
+	<nav class="col-12 col-md-6 p-0" aria-label="breadcrumb"></nav>
+	<div
+		class="col-12 col-md-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
+		<a href="#" class="fa fa-facebook"></a> <a href="#"
+			class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
+			href="#" class="fa fa-linkedin"></a> <a href="#"
+			class="fa fa-instagram"></a> <a href="#" class="fa fa-pinterest"></a>
+	</div>
+</header>
