--- a/Biblioteca.html
+++ b/Biblioteca.html
@@ -146,7 +146,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4 text-center">
               <img class="img-responsive" id="fotolibroModal" title="Foto de la cubierta ">
             </div>
-            <!-- ***************************************  Acordeón   ************************************************************************ -->
+            <!-- ****************************************  Acordeón   ************************************************************************ -->
             <div class="accordion " id="accordionExample">
 
               <div data-target="#list-example" data-offset="0" class="scrollspy-example">
