--- a/Biblioteca.html
+++ b/Biblioteca.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
+  <!-- *************************************  Required meta tags *************************************************************** -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -10,7 +10,7 @@
   <meta name="description" content="CIFO La Violeta">
   <meta name="keywords" content="formacion, SOC, CIFO, formación digital" />
 
-  <!-- Bootstrap CSS -->
+  <!-- *************************************  Bootstrap CSS *********************************************************************-->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
   <!-- Fonts CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -20,11 +20,12 @@
   <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
 
 
-  <!-- DataTables CSS -->
+  <!-- ************************************   DataTables CSS *******************************************************************-->
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" />
 
   <title>CIFO La Violeta</title>
 </head>
+<!-- ******************************************    data-include BODY   ************************************************************** -->
 
 <body class="container-fluid">
   <div data-include="Nav.html"></div>
@@ -32,12 +33,9 @@
 
 
 
-
-
-
   <div class="row">
     <div class="col-12 col-md-4">
-      <div class="card h-100">
+      <div class="card">
         <div class="card-header">
           Filtro
         </div>
@@ -92,7 +90,8 @@
   </div>
 
 
-  <!-- Modal -->
+  <!--********************************************************  MODAL LIBRO  ******************************************************-->
+
   <div class="modal fade bd-modal-lg" id="ModalLibro" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true ">
     <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
       <div class="modal-content">
@@ -143,10 +142,10 @@
                 <div id="nivelModal" class="col-6 bg-light text-dark"></div>
               </div>
             </div>
-            <div class="col-sm-4 col-md-4 col-lg-4 text-center">
-              <img class="img-responsive" id="fotolibroModal" title="Foto de la cubierta ">
+            <div class="col-sm-4 col-md-4 col-lg-4">
+              <img class="img-responsive align-self-stretch border rounded" style="object-fit:cover" id="fotolibroModal" title="Foto de la cubierta " src="">
             </div>
-            <!-- ****************************************  Acordeón   ************************************************************************ -->
+            <!-- *************************************** MODAL ACCORDION ************************************************************************ -->
             <div class="accordion " id="accordionExample">
 
               <div data-target="#list-example" data-offset="0" class="scrollspy-example">
@@ -187,15 +186,16 @@
     </div>
   </div>
 
+  <!-- ******************************************    data-include FOOTER   ************************************************************** -->
   <div data-include="Footer.html"></div>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- ***************************************     Optional JavaScript   ************************************************************** -->
+  <!-- ***************************************     jQuery first, then Popper.js, then Bootstrap JS ************************************ -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" type="text/javascript"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" type="text/javascript"></script>
 
-  <!-- Datatable -->
+  <!-- ***************************************     Datatable Js *********************************************************************** -->
   <script type="text/javascript" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 
@@ -203,11 +203,10 @@
 
   <script src="js/multipage.js" type="text/javascript"></script>
   <script>
-    /* ----------------------------------- GEt Secciones  llamada AJAX--------------------------- */
+    /* ****************************************   GET Secciones  llamada AJAX   ***************************************************** */
+
     var xhr;
     xhr = new XMLHttpRequest();
-
-
     xhr.onreadystatechange = function() {
       if (xhr.readyState == 4 && xhr.status == 200) {
         var objSecciones = JSON.parse(xhr.responseText);
@@ -225,13 +224,7 @@
     xhr.open('GET', 'http://app.cifo.local/api/public/biblioteca/secciones/', true);
     xhr.send();
 
-
-
-
-
-    /* ********************************************************* GET TEMAS  llamada AJAX ********************************************************** */
-
-
+    /* *****************************************   GET Temas  llamada AJAX ********************************************************** */
 
     document.getElementById("tblSecciones").onchange = function() {
       document.getElementById("tblTemas").innerHTML = '<option value="">-- Escoge un Tema --</option>';
@@ -258,9 +251,7 @@
     }
 
 
-    /* ======================= GET EITORILES     llamada AJAX ============================== */
-
-
+    /* ****************************************   GET Editoriales    llamada AJAX ***************************************************** */
 
     var xhr8;
     xhr8 = new XMLHttpRequest();
@@ -281,7 +272,7 @@
     xhr8.open("GET", "http://app.cifo.local/api/public/biblioteca/editoriales/", true);
     xhr8.send();
 
-    // ******************************************   relleno datatable ***************************************************************
+    // ******************************************   RELLENO datatable ***************************************************************
 
 
     var tabla = $('#tbllibros').DataTable({
@@ -320,7 +311,7 @@
 
 
 
-    /* ------------------------------------- get libros ----------------------------- */
+    /* *********************************************   GET libros  **************************************************************************** */
 
 
     var xhr7;
@@ -344,7 +335,7 @@
           });
         }
         tabla.draw();
-        // $('#ajaxModal').modal('hide');
+
       }
     }
 
@@ -352,8 +343,8 @@
     xhr7.send();
 
 
-    //
-    // <!-- *********************************************   filtraje   relleno datatable via AJAX**************************************************** -->
+
+    // <!-- *********************************************   FILTRAJE  relleno datatable via AJAX**************************************************** -->
 
 
     document.getElementById("btnFiltrar").onclick = function() {
@@ -383,15 +374,11 @@
             })
           }
           tabla.draw();
-
         }
       }
 
-
-
       if (seccionId == "" && temasId == "") {
         xhr.open('GET', 'http://app.cifo.local/api/public/biblioteca/libros/', true);
-
       }
 
       if (!seccionId == "" && temasId == "") {
@@ -404,29 +391,24 @@
 
       }
 
-
-
       if (seccionId == "" && !editorialId == "") {
         xhr.open('GET', 'http://app.cifo.local/api/public/biblioteca/libros/editoriales/' + editorialId + '/', true);
 
       }
-
 
       if (!seccionId == "" && !editorialId == "") {
         xhr.open('GET', 'http://app.cifo.local/api/public/biblioteca/libros/seccion/' + seccionId + '/editorial/' + editorialId + '/', true);
 
       }
 
-
       if (!seccionId == "" && !temasId == "" && !editorialId == "") {
         xhr.open('GET', 'http://app.cifo.local/api/public/biblioteca/libros/seccion/' + seccionId + '/tema/' + temasId + '/editorial/' + editorialId + '/', true);
 
       }
       xhr.send();
-
     }
 
-    // ************************************************  boton de borraje ****************************************************
+    // ************************************************  BOTON de borraje ***********************************************************************
 
     document.getElementById("btnBorrar").onclick = function() {
       document.getElementById("tblSecciones").value = "";
@@ -434,7 +416,7 @@
       document.getElementById("tblEditoriales").value = "";
     }
 
-    // ***************************************************** modal libro via API  AJAX********************************************************
+    // ************************************************* MODAL Relleno libro via API  AJAX********************************************************
 
     function viewLibro(id) {
       console.log(id);
@@ -447,41 +429,35 @@
           console.log(libroModal);
           var values = Object.values(libroModal);
           console.log(values);
-          document.getElementById("isbnModal").innerHTML = values[1];
-          document.getElementById("tituloModal").innerHTML = values[2];
-          document.getElementById("subtituloModal").innerHTML = values[3];
-          document.getElementById("paginaModal").innerHTML = values[4];
-          document.getElementById("editorialModal").innerHTML = values[12];
-          document.getElementById("anoModal").innerHTML = values[5];
-          document.getElementById("temaModal").innerHTML = values[13];
-          document.getElementById("seccionModal").innerHTML = values[14];
-          document.getElementById("nivelModal").innerHTML = values[6];
-          document.querySelector("#collapseOne div").innerHTML = values[9];
+          document.getElementById("isbnModal").innerHTML = objlibroModal.record.isbn;
+          document.getElementById("tituloModal").innerHTML = objlibroModal.record.titulo;
+          document.getElementById("subtituloModal").innerHTML = objlibroModal.record.subtitulo;
+          document.getElementById("paginaModal").innerHTML = objlibroModal.record.pagina;
+          document.getElementById("editorialModal").innerHTML = objlibroModal.record.editorial;
+          document.getElementById("anoModal").innerHTML = objlibroModal.record.anio_publicacion;
+          document.getElementById("temaModal").innerHTML = objlibroModal.record.tema;
+          document.getElementById("seccionModal").innerHTML = objlibroModal.record.seccion;
+          document.getElementById("nivelModal").innerHTML = objlibroModal.record.nivel;
+          document.querySelector("#collapseOne div.card-body").innerHTML = objlibroModal.record.descripcion;
 
 
-          var autoresLibros = ''
+          document.querySelector("#collapseTwo div.card-body").innerHTML = "";
 
-          for (var i = 0; 1 < objlibroModal.record.autores.length; i++) {
-            console.log(values);
-            document.querySelector("#collapseTwo div").innerHTML = values[15];
+          for (var i = 0; i < objlibroModal.record.autores.length; i++) {
+            if (i != 0) {
+              document.querySelector("#collapseTwo div.card-body").innerHTML += "<hr />";
+            }
+            console.log(objlibroModal.record.autores[i].nombre);
+            console.log(document.querySelector("#collapseTwo div.card-body"));
+            document.querySelector("#collapseTwo div.card-body").innerHTML += objlibroModal.record.autores[i].nombre;
+            document.querySelector("#collapseTwo div.card-body").innerHTML += '<img  class="" style="float:left; width:20px;" src="' + objlibroModal.record.autores[i].foto + '"   />';
+            document.querySelector("#collapseTwo div.card-body").innerHTML += '<p>' + objlibroModal.record.autores[i].biografia + '</p>';
+            document.getElementById("fotolibroModal").src = objlibroModal.record.cubierta;
 
-            //   // autoresLibros += '<img src="' + libroModal.record.autores[i].foto + '" height="100px"></img>' +
-            //   //    '<h5>' + libroModal.record.autores[i].nombre + '&nbsp;' + libroModal.record.autores[i].apellidos + '</h5>' +
-            //   //    '<p>' + libroModal.record.autores[i].biografia + '</p>';
           }
-          var imagenLibro = '<img id="fotoLibro" src="' + objlibroModal.record.cubierta + '" class="align-self-stretch border rounded" style="object-fit:cover" >';
-
-          document.querySelector("#collapseTwo div").innerHTML = autoresLibros;
-          document.getElementById("fotolibroModal").innerHTML = imagenLibro;
-          //
-          //
-          //
-          //
-
         }
+
       }
-
-
       xhr.open('GET', 'http://app.cifo.local/api/public/biblioteca/libros/' + id + '/', true);
       xhr.send();
 
