--- a/Centros.html
+++ b/Centros.html
@@ -1,269 +1,106 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- ******************************************Required meta tags **********************************************************-->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<meta name="author" content="MND" />
-<meta name="description" content="CIFO La Violeta">
-<meta name="keywords" content="formacion, SOC, CIFO, formación digital" />
+	<meta name="author" content="TBM" />
+	<meta name="description" content="CIFO La Violeta">
+	<meta name="keywords" content="formacion, SOC, CIFO, formación digital" />
 
-<!-- Bootstrap CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<!-- Fonts CSS -->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Custom CSS -->
-<link rel="stylesheet" href="css/cifo.css">
-<link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<title>Centres del CIFO</title>
+	<!-- *********************************************Bootstrap CSS *************************************************************-->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<!-- Fonts CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Custom CSS -->
+	<link rel="stylesheet" href="css/cifo.css">
+	<link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<title>Centres del CIFO</title>
 </head>
+
 <body class="container-fluid">
 	<div data-include="Nav.html"></div>
 	<div data-include="Header.html"></div>
 
-	<section class="row py-3">
-		<div class="col-12 col-md-6 col-lg-4 pb-3">
-			<div class="card p-3 m-3 h-100 justify-content-center">
-				<img src="img/CIFO_1.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO La Violeta</h5>
-					<ul class="list-unstyled small">
-						<li><span class="fa fa-phone"></span>932 54 17 00</li>
-						<li><span class="fa fa-envelope"></span>cifo_violeta.soc@gencat.cat</li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
-							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>Plaza del Conde de
-							Sert, 25. 08035 Barcelona</li>
-						<li><br></li>
-						<li><span class="fa fa-road"></span>Acceso
-							<ul>
-								<li>Bus: 60, H4, V15, bus barrio 124</li>
-								<li>Metro: Vall d'Hebron + bus / Metro: Penitents+bus 124</li>
-								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
-							</ul></li>
-					</ul>
 
-				</div>
-				<div class="text-center">
-					<a href="#" class="btn bg-custom text-light">Más Información</a>
-				</div>
-			</div>
+	<div class="row m-0 mb-2">
+		<div class="col-12 pt-3">
+			<h3>Centros</h3>
 		</div>
-		<div class="col-12 col-md-6 col-lg-4 pb-3">
-			<div class="card p-3 m-3 h-100 justify-content-center">
-				<img src="img/CIFO_2.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO Sabadell</h5>
-					<ul class="list-unstyled small">
-						<li><span class="fa fa-phone"></span>937 36 29 10</li>
-						<li><span class="fa fa-envelope"></span>
-							cifo_sabadell.soc@gencat.cat</li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
-							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>Carretera
-							Nacionalm.22 Terrassa</li>
-						<li><br></li>
-						<li><span class="fa fa-road"></span>Acceso
-							<ul>
-								<li>Bus C5 i C7 (interurbana de Sabadell Y Terrassa.
-									Parada: Mancomunitat</li>
-								<li>Salida 15 de la C58</li>
-							</ul></li>
-					</ul>
-				</div>
-				<div class="text-center">
-					<a href="#" class="btn bg-custom text-light">Más Información</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4 pb-3">
-			<div class="card p-3 m-3 h-100 justify-content-center">
-				<img src="img/CIFO_3.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO Santa Coloma</h5>
-					<ul class="list-unstyled small">
-						<li><span class="fa fa-phone"></span>93 254 17 00</li>
-						<li><span class="fa fa-envelope"></span>
-							cifo_santacoloma.soc@gencat.cat</li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
-							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>Estamos situados en
-							una zona residencial y de equipamientos sociales. Dirección:
-							avenida Ramon Berenguer IV, 74, Santa Coloma de Gramenet</li>
-						<li><br></li>
-						<li><span class="fa fa-road"></span>Acceso
-							<ul>
-								<li>Metro L1 (estación Santa Coloma)</li>
-								<li>Metro L9 - Norte (estación Singuerlín)</li>
-								<li>Autobús B-30 (parada delante del Centro)</li>
-								<li>B-20, B27 y B-80</li>
-							</ul></li>
-					</ul>
+	</div>
+	<div class="container">
 
-				</div>
-				<div class="text-center">
-					<a href="#" class="btn bg-custom text-light">Más Información</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4 pb-3">
-			<div class="card p-3 m-3 h-100 justify-content-center">
-				<img src="img/CIFO_4.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO L'Hospitalet</h5>
-					<ul class="list-unstyled small">
-						<li><span class="fa fa-phone"></span>932 60 31 20</li>
-						<li><span class="fa fa-envelope"></span>
-							cifo_hospitalet.soc@gencat.cat</li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
-							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>Carretera del Mig,
-							24 (esquina calle Leonardo da Vinci) 08907 Hospitalet de
-							Llobregat</li>
-						<li><br></li>
-						<li><span class="fa fa-road"></span>Acceso
-							<ul>
-								<li>Ferrocarriles de la Generalitat de Catalunya (FGC),
-									estación Sant Josep)</li>
-								<li>Renfe cercanías (estación Bellvitge) Línea R2 destino
-									final Vilanova i la Geltrú, Castelldefels, Aeropuerto</li>
-								<li>Metro: Línea 9 estación Can Tries/Gornal</li>
-								<li>Autobuses: L12, L52, parada en Enric Prat de la
-									Riba/Ventura Gassol LH1, LH2, parada en Travessia
-									Industrial/Miquel Romeu L14, parada en Avenida Fabregada/Cobalt
-									l</li>
-							</ul></li>
-					</ul>
+		<div class="row  m-0 pb-3 d-flex" id="centroShow"></div>
+	</div>
 
-				</div>
-				<div class="text-center">
-					<a href="#" class="btn bg-custom text-light">Más Información</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4 pb-3">
-			<div class="card p-3 m-3 h-100 justify-content-center">
-				<img src="img/CIFO_5.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO LLeida</h5>
-					<ul class="list-unstyled small">
-						<li><span class="fa fa-phone"></span>973 72 76 20</li>
-						<li><span class="fa fa-envelope"></span>cifo_lleida.soc@gencat.cat</li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
-							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>Plaza del Conde de
-							Sert, 25. 08035 Barcelona</li>
-						<li><br></li>
-						<li><span class="fa fa-road"></span>Acceso
-							<ul>
-								<li>Bus: 60, H4, V15, bus barrio 124</li>
-								<li>Metro: Vall d'Hebron + bus / Metro: Penitents+bus 124</li>
-								<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>
-							</ul></li>
-					</ul>
 
-				</div>
-				<div class="text-center">
-					<a href="#" class="btn bg-custom text-light">Más Información</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4 pb-3">
-			<div class="card p-3 m-3 h-100 justify-content-center">
-				<img src="img/CIFO_6.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO Salt</h5>
-					<ul class="list-unstyled small">
-						<li><span class="fa fa-phone"></span>972 40 55 70</li>
-						<li><span class="fa fa-envelope"></span>cifo_salt.soc@gencat.cat</li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
-							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>c/Alfons Moré, 1,
-							Salt 17190</li>
-						<li><br></li>
-						<li><span class="fa fa-road"></span>Acceso
-							<ul>
-								<li>El acceso al centro se puede hacer mediante transporte
-									público: L3 i L4</li>
 
-							</ul></li>
-					</ul>
 
-				</div>
-				<div class="text-center">
-					<a href="#" class="btn bg-custom text-light">Más Información</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4 pb-3">
-			<div class="card p-3 m-3 h-100 justify-content-center">
-				<img src="img/CIFO_7.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO San Feliu</h5>
-					<ul class="list-unstyled small">
-						<li><span class="fa fa-phone"></span>936 85 77 90</li>
-						<li><span class="fa fa-envelope"></span>cifo_santfeliu.soc@gencat.cat</li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
-							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>c/Hospitalet, 3
-							(esquina N-II) 08980 - Sant Feliu de Llobregat (Barcelona)</li>
-						<li><br></li>
 
-					</ul>
 
-				</div>
-				<div class="text-center">
-					<a href="#" class="btn bg-custom text-light">Más Información</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4 pb-3">
-			<div class="card p-3 m-3 h-100 justify-content-center">
-				<img src="img/CIFO_8.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title text-primary">CIFO Tarragona</h5>
-					<ul class="list-unstyled small">
-						<li><span class="fa fa-phone"></span>977 25 15 66</li>
-						<li><span class="fa fa-envelope"></span>cifo_tarragona.soc@gencat.cat</li>
-						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
-							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>Cami de la
-							Budellera s/n – 43007 Tarragona</li>
-						<li><br></li>
-						<li><span class="fa fa-road"></span>Acceso
-							<ul>
-								<li>Autobuses L1 y L9, L11, L12, y L13</li>
-
-							</ul></li>
-					</ul>
-
-				</div>
-				<div class="text-center">
-					<a href="#" class="btn bg-custom text-light">Más Información</a>
-				</div>
-			</div>
-		</div>
-	</section>
 
 	<div data-include="Footer.html"></div>
 
 
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		type="text/javascript"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		type="text/javascript"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		type="text/javascript"></script>
+	<!-- *****************************************   Optional JavaScript ************************************************************-->
+	<!-- *****************************************   jQuery first, then Popper.js, then Bootstrap JS ********************************-->
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" type="text/javascript"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/multipage.js" type="text/javascript"></script>
+  <script  type="text/javascript">
+
+
+// ************************************************ llamada AJAX XMLHttpRequest ********************************************************
+		var xhr;
+		xhr = new XMLHttpRequest();
+		xhr.onreadystatechange = function() {
+
+			if (xhr.readyState == 4 && xhr.status == 200) {
+				var objCentro = JSON.parse(xhr.responseText);
+				document.getElementById('centroShow').innerHTML = '';
+				for (i in objCentro.records) {
+// ************************************************  Relleno variable via API **********************************************************
+					var centrosCad = '' +
+						'<div class="col-12 col-md-6 col-lg-4 pb-3">' +
+							'<div class="card h-100 justify-content-center">' +
+								'<img src="' + objCentro.records[i].media + '" class="card-img-top" alt="...">' +
+								'<div class="card-body">' +
+									'<h5 class="card-title text-primary">' + objCentro.records[i].nombre + '</h5>' +
+									'<ul class="list-unstyled small">' +
+										'<li><span class="fa fa-phone"></span>' + objCentro.records[i].telefono + '</li>' +
+										'<li><span class="fa fa-envelope"></span>' + objCentro.records[i].buzon + '</li>' +
+										'<li><i class="fa fa-clock-o" aria-hidden="true"></i>' + objCentro.records[i].horario + '</li>' +
+										'<li><span class="fa fa-map-marker"></span>' + objCentro.records[i].direccion + '</li>' +
+										'<li><br></li>' +
+										'<li><span class="fa fa-road"></span>' + objCentro.records[i].acceso + '<ul>' +
+										'<li>Bus: 60, H4, V15, bus barrio 124</li>' +
+										'<li>Metro: Vall dHebron + bus / Metro: Penitents + bus 124 < /li>' +
+										'<li>Coche: Ronda de Encima de B20, salida 6 (Vallcarca)</li>' +
+									'</ul>' +
+
+								'</div>' +
+								'<div class="text-center">' +
+									'<a href="#" class="btn bg-custom text-light">Más Información</a>' +
+								'</div>' +
+							'</div>' +
+						'</div>';
+					document.getElementById("centroShow").innerHTML += centrosCad;
+
+				}
+			}
+	 }
+// ******************************************************   llamada  GET a La API *********************************************************
+
+
+		xhr.open('GET', 'http://app.cifo.local/api/public/formacion/centros/', true);
+		xhr.send();
+
+	</script>
 </body>
+
 </html>
